# vins_track

./: .clang-format  .gitignore  README.md  run.sh
camera_models/src/camera_models/: CameraFactory.cc
config/: vins_rviz_config.rviz
config/helmet/: helmet.yaml  helmet_mult.yaml  left_mei.yaml  left_pinhole.yaml  right_mei.yaml  right_pinhole.yaml
config/indemind/: indemind.yaml  left_mei.yaml  right_mei.yaml
config/mynt_4/: cam_1_l_pinhole_full.yaml  cam_1_r_pinhole_full.yaml  cam_2_l_pinhole_full.yaml  cam_2_r_pinhole_full.yaml  mynt.yaml
config/supernode/: cam_1_l_pinhole_full.yaml  cam_2_l_pinhole_full.yaml  supernode.yaml
config/t265/: left_mei.yaml  right_mei.yaml  t265_mono_imu_config.yaml  t265_stereo_config.yaml
loop_fusion/: CMakeLists.txt
loop_fusion/src/: keyframe.cpp  keyframe.h  parameters.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/utility/: database.pb.cc  database.pb.h  database.proto  protoc
sensor_deiver/camera_player/: CMakeLists.txt  package.xml
sensor_deiver/camera_player/config/: camera_1.yaml  config.cfg  tag.rviz  walker104-640-HWB850.yaml  walker_tag_astra_20_1.yaml  walker_tag_astra_20_2.yaml
sensor_deiver/camera_player/include/: V4L2Capture.hpp  client.h
sensor_deiver/camera_player/src/: V4L2Capture.cpp  play_opencv_node.cpp  play_topic_node.cpp  play_v4l2_node.cpp
sensor_deiver/indemind/: .clang-format  CMakeLists.txt  package.xml
sensor_deiver/indemind/src/: indemind_node.cpp
support_files/: note.md
vins_estimator/: CMakeLists.txt
vins_estimator/src/: rosNodeTest.cpp
vins_estimator/src/estimator/: estimator.cpp  estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/featureTracker/: feature_tracker.cpp
vins_estimator/src/utility/: visualization.cpp
